fix for bug #19170 (Event creation leads to 100% CPU usage)

sql/event_timed.cc:
  - fix 100% cpu usage problem. If time_now==last_exec then don't schedule
    the event for time_now but increase the multiplier
  - if time_now is between STARTS and ENDS (the latter is set) or after STARTS
    (ENDS is not set) and there was no previous execution (imagine disabled
    scheduler being started) then don't schedule for time_now but for STARTS
    and then get_next_time() will find the correct time.